--- a/.gitignore
+++ b/.gitignore
@@ -10,6 +10,9 @@
 
 # production
 /build
+build.pem
+build.crx
+manifest.json
 
 # misc
 .DS_Store
@@ -21,3 +24,5 @@
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
+
+
