--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     ]
   },
   "devDependencies": {
+    "@types/react-modal": "^3.12.0",
     "@types/styled-components": "^5.1.9",
     "@typescript-eslint/eslint-plugin": "^4.19.0",
     "@typescript-eslint/parser": "^4.19.0",
@@ -60,6 +61,7 @@
     "eslint-plugin-react-hooks": "^1.7.0",
     "prettier": "^2.2.1",
     "react-layout-library": "^1.5.7",
+    "react-modal": "^3.12.1",
     "styled-components": "^5.2.1"
   }
 }
